[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/DevourerSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Devourer.gd" type="Script" id=2]
[ext_resource path="res://QTdevourerBar.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 76.0

[sub_resource type="Animation" id=5]
resource_name = "DevAttackHold"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 16, 15, 16, 14, 16, 14 ]
}

[sub_resource type="Animation" id=6]
resource_name = "DevAttackRetract"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 14, 13, 12, 11, 10, 10, 9, 8, 17 ]
}

[sub_resource type="Animation" id=7]
resource_name = "DevAttackStart"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=8]
resource_name = "DevDefeated"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 8, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "DevIdle"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "DevWalk"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 15.25, 27.25 )

[node name="Devourer" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -35, 0 )
hframes = 4
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
playback_speed = 0.25
anims/DevAttackHold = SubResource( 5 )
anims/DevAttackRetract = SubResource( 6 )
anims/DevAttackStart = SubResource( 7 )
anims/DevDefeated = SubResource( 8 )
anims/DevIdle = SubResource( 2 )
anims/DevWalk = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -32, 0 )
enabled = true
collision_mask = 2

[node name="AttackDetector" type="Area2D" parent="."]
position = Vector2( -80, -32 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 31.25, 51.25 )
shape = SubResource( 10 )

[node name="QTdevourerBar" parent="." instance=ExtResource( 3 )]
margin_left = -184.0
margin_top = -120.0
margin_right = 76.0
margin_bottom = -80.0

[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="timed_click" from="QTdevourerBar" to="." method="_on_QTdevourerBar_timed_click"]
